# procurator

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  Makefile.am  README.md  configure.ac  core.c  core.h  crypto.c  crypto.h  ctest  ctest.c  curltest.c  local.c  mocktest  server.c
.github/workflows/: docker-publish.yml  test.yml
