bin_PROGRAMS = procurator-local procurator-server procurator-test
LDADD=-lcrypto
procurator_local_SOURCES = local.c core.c crypto.c librdp/rdp.c librdp/libdict/dict.c librdp/libdict/crc.c liblist/list.c core.h librdp/rdp.h liblist/list.h librdp/libdict/dict.h librdp/libdict/crc.h 
procurator_server_SOURCES = server.c core.c crypto.c librdp/rdp.c librdp/libdict/dict.c librdp/libdict/crc.c liblist/list.c core.h librdp/rdp.h liblist/list.h librdp/libdict/dict.h librdp/libdict/crc.h 

procurator_test_SOURCES = ctest.c

